@@ -14,6 +14,7 @@ munin (work)
   * Added dist-directory for Solaris packages.
   * Created munin-cgi-graph, which creates dynamic graphs. 
   * Added munin.conf option "output_graphs (cgi|cron)" which defaults to cron.
+  * Bugfix in cdef calculations.
 
 munin (1.1.1)
 
